--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "express": "^4.18.2",
     "pg": "^8.11.3"
   },
   "devDependencies": {
